# casper-yield-oracle

./: .env.sample  .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  Odra.toml  README.md  deploy_info.txt  index.html  ledger.json
agent/: .env.sample  README.md  package-lock.json  package.json
agent/src/: index.js  pools.js  publisher.js  scorer.js
docs/: ARCHITECTURE.md  DORAHACKS_SUBMISSION.md  demo-narration.txt
resources/casper_contract_schemas/: yield_oracle_schema.json
resources/legacy/: yield_oracle_schema.json
scripts/: derive_casper_key.py
src/: lib.rs  yield_oracle.rs
wasm/: YieldOracle.wasm
