[package]
edition = "2021"
name = "casper_yield_oracle"
version = "0.1.0"
authors = ["CVO Team"]
license = "MIT"
description = "Casper Verifiable Yield Oracle - on-chain attestation registry for autonomous AI yield/risk oracle agents"

[dependencies]
odra = { version = "2.8.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }
odra-cli = { version = "2.8.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8.0", optional = true }

[[bin]]
name = "casper_yield_oracle_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_yield_oracle_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "casper_yield_oracle_cli"
path = "bin/cli.rs"
test = false

[[bin]]
name = "cvo_on_livenet"
path = "bin/cvo_on_livenet.rs"
required-features = ["livenet"]
test = false

[features]
default = []
livenet = ["dep:odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
